--- a/templates/static/usuarios/css/tela-cadastro.css
+++ b/templates/static/usuarios/css/tela-cadastro.css
@@ -16,6 +16,13 @@
     outline: none;
     font-family: 'Montserrat', sans-serif;
 }
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
 
 body{
     background-size: cover;
@@ -34,59 +41,51 @@ body{
     cursor: pointer;
     padding: 9px;
     align-self: center;
-    margin-top: 20px;
-    margin-left: 410px;
+    margin-bottom: 10px;
 }
 .button:hover{
-    background-color: var(--contrast-color);
+    background-color: var(--main-color);
     color: var(--dark-color);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .button-pequeno{
-    background-color: var(--dark-color);
-    color: white;
+    color: var(--dark-color);
     border: none;
-    border-radius: 20px;
     width: 250px;
     cursor: pointer;
     padding: 9px;
     align-self: center;
-    margin-top: 20px;
-    margin-left: 410px;
+    font-size: 16px;
+    font-weight: 300;
+    margin-bottom: 15px;
 }
 .button-pequeno:hover{
-    background-color: var(--contrast-color);
-    color: var(--dark-color);
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    color: white;
 }
 
 .caixa{
     display: flex;
     position: relative;
-    padding-top: 5px;
+    padding: 0px 10px 20px 10px;
     width: 800px;
     height: 700px;
     flex-shrink: 0;
     border-radius: 35px;
-    border: 15px solid #804600;
-    background: #F5BE7C;
-    margin-top: 25px;
-    margin-left: 100px;
+    border: 15px solid var(--dark-color);
+    background: var(--contrast-color);
 }
 
 .caixa-login{
     display: flex;
     position: relative;
-    padding-top: 5px;
+    margin-top: 60px;
     width: 500px;
-    height: 600px;
+    height: 660px;
     flex-shrink: 0;
     border-radius: 35px;
     border: 15px solid #804600;
     background: #F5BE7C;
-    margin-top: 25px;
-    margin-left: 250px;
 }
 
 
@@ -99,6 +98,7 @@ body{
     padding: 50px;
     color: #7F4600;
     text-align: center;
+    padding-bottom: 100px;
 
     /* TITULO */
     font-family: Montserrat;
@@ -115,7 +115,7 @@ body{
     width: 100%;
     height: 100%;
     padding: 50px;
-    color: #7F4600;
+    color: var(--differential-color);
     text-align: center;
     /* TITULO */
     font-family: Montserrat;
