--- a/templates/static/usuarios/css/tela-cadastro.css
+++ b/templates/static/usuarios/css/tela-cadastro.css
@@ -173,8 +173,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: 50%;
-    padding: 25px;
+    height: 500px;
     text-align: center;
     /* TITULO */
     font-family: Montserrat;
