--- a/gerenciamento/templates/perfilGerente.html
+++ b/gerenciamento/templates/perfilGerente.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container-perfil">
-        <div id="att-perfil" class="att-perfil">
+        <div id="att-perfil">
             <form action="{% url 'perfil' %}" method="POST">
                 {% csrf_token %}
                 <div class="caixa-perfil">
