--- a/gerenciamento/templates/adicionarProduto.html
+++ b/gerenciamento/templates/adicionarProduto.html
@@ -3,6 +3,7 @@
 
 {% block 'head' %}
     <link rel="stylesheet" href="{% static 'gerenciamento/css/addProduto.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
 {% endblock %}
 
 {% block 'dashboard' %}
@@ -14,19 +15,19 @@
                 <p class="subtitulo-produto">Aqui você pode gerenciar os produtos do sistema.</p>
             </div>
             <div class="botoes">
-                <div class="adicionar-produto" name="adicionarProduto">
+                <div class="add-produto" name="addproduto">
                     <button onclick="exibir_produto('1')" class="add-btn">Cadastrar Produto</button>
                 </div>
-                <div class="atualizar-produto" name="atualizarProduto">
+                <div class="att-produto" name="attproduto">
                     <button onclick="exibir_produto('2')" class="add-btn">Atualizar Produto</button>
                 </div>
             </div>
         </div>
     
 
-        <div id="add-produto" class="add-produto" name="add-produto", style="display:none">
+        <div id="add-produto" class="adicionar-produto" name="add-produto", style="display:none">
             <form action="% url 'addProduto' %" method="POST" enctype="multipart/form-data">{% csrf_token %}
-                <div class="main-produto">
+                <div class="produtoform">
                     <h2 class="main-title">Adicionar produto</h2>
                     #TODO tela de atualizar produto
                     <div class="row">
@@ -88,15 +89,92 @@
                 </div>
                 {{form.submit}}
                 <br>
-                
                 <br>
                 <div class="botao">
                     <input type="submit" value="Enviar" class="btn-add-principal">
                 </div>
             </form>
         </div>
+
+        <div id="att-produto" class="adicionar-produto" name="att-produto" style="display: none;">
+            <div class="produtoform">
+                <h2 class="main-title">Atualizar produto</h2>
+                <p class="label-text">Produto: </p>
+                <select id="produto-select" onchange="dados_produto(this)" class="form-control">
+                    <option value="" selected disabled hidden>Selecione um produto</option>
+                    {% for produto in produtos %}
+                        <option value="{{ produto.id_produto }}">{{ produto.nome_produto }}</option>
+                    {% endfor %}
+                </select>
+                <br>
+                <div class="row">
+                    <div class="col-md">
+                        <p class="label-text">Nome do produto</p>
+                    </div>
+                    <div class="col-md">
+                        <p class="label-text">Descrição</p>
+                    </div>
+                    <div class="col-md">
+                        <p class="label-text">Preço</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md">
+                        {{ form.nome_produto }}
+                    </div>
+                    <div class="col-md">
+                        {{ form.descricao }}
+                    </div>
+                    <div class="col-md">
+                        {{ form.preco }}
+                    </div>      
+                </div>
+                <br>
+                <div class="row">
+                    <p class="label-text">Categoria</p>
+                    <div class="option-entrada">
+                        {{ form.categoria }}
+                    </div>
+                    <div class="label-imagem">
+                        <label for="{{ form.imagem.id_for_label }}">Imagem</label>
+                        {{ form.imagem }}
+                    </div>
+                </div>
+                <div class="row">
+                    <input onclick="atualizar_produto()" type="submit" value="Atualizar" class="btn-add-principal">
+                    <input onclick="deletar_produto()" type="submit" value="Deletar" class="btn-add-principal">
+                </div>
+            </div>
+            <br>
+
+            <div class="add-ingredientes">
+                <h3>Ingredientes da receita</h3>
+                <span class="btn-add-ingredientes" onclick="addIngrediente()">+ Adicionar um ingrediente</span>
+                <div class="ingredientes" id="form-ingrediente">
+                    <br>
+                    <div class="row">
+                        <div class="col-md">
+                            {{ form.nome_ingrediente }}
+                        </div>
+                        <div class="col-md">
+                            {{ form.unidadeMedida }}
+                        </div>
+                        <div class="col-md">
+                            {{ form.quantidade_usada }}
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            {{form.submit}}
+            <br>
+            <br>
+            <div class="botao">
+                <input type="submit" value="Enviar" class="btn-add-principal">
+            </div>
+        </div>
     </div>
-    <script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
+<script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
 </body>
 
 {% endblock %}
