--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -31,22 +31,22 @@
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Nome do funcionário</p>
-                        <input class="caixa-entrada" type="text" id="nome" name="nome" placeholder="Nome do funcionário">
+                        <input class="caixa-entrada" type="text" id="nome" name="nome_funcionario" placeholder="Nome do funcionário" value="{{nome_funcionario}}">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Telefone</p>
-                        <input class="caixa-entrada" type="text" id="telefone" name="telefone" placeholder="Telefone do funcionário">
+                        <input class="caixa-entrada" type="text" id="telefone" name="telefone_funcionario" placeholder="Telefone do funcionário" value="{{telefone_funcionario}}">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Cargo</p>
-                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário">
+                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário" value="{{cargo}}">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Salário (apenas números)</p>
-                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário">
+                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário" value="{{salario}}">
                     </div>
                 </div>
                 <br>
@@ -69,22 +69,22 @@
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Nome do funcionário</p>
-                        <input class="caixa-entrada" type="text" id="nome_funcionario" name="nome" placeholder="Nome do funcionário">
+                        <input class="caixa-entrada" type="text" id="nome_funcionario" name="nome" placeholder="Nome do funcionário" value="{{nome_funcionario}}">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Telefone</p>
-                        <input class="caixa-entrada" type="text" id="telefone_funcionario" name="telefone" placeholder="Telefone do funcionário">
+                        <input class="caixa-entrada" type="text" id="telefone_funcionario" name="telefone" placeholder="Telefone do funcionário" value="{{telefone_funcionario}}">
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md">
                         <p class="label-text">Cargo</p>
-                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário">
+                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário" value="{{cargo}}">
                     </div>
                     <div class="col-md">
                         <p class="label-text">Salário (apenas números)</p>
-                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário">
+                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário" value="{{salario}}">
                     </div>
                 </div>
                 <br>
