--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -30,7 +30,7 @@
                 {% csrf_token %}
                 <h1>Fazer Login</h1>
                 <span>Faça Login no sistema</span>
-                <input type="text" placeholder="CPF" name="cpf" value="{{cpf}}" />
+                <input type="email" placeholder="E-Mail" name="email" value="{{email}}" />
                 <input type="password" placeholder="Senha" name="senha" value="{{password}}" />
                 <br>
                 <button class="button" value="Login">Login</button>
