--- a/gerenciamento/templates/listarPedidos.html
+++ b/gerenciamento/templates/listarPedidos.html
@@ -28,10 +28,10 @@
             <tbody>
                 {% for pedido in pedidos %}
                     <tr>
-                        <th><a href="{% url 'pedido' pedido.id %}">{{ pedido.id }}</a></th>
-                        <td>{{ pedido.cliente }}</td>
+                        <th><a href="{% url 'notaPedido' pedido.id_pedido %}">{{pedido.id_pedido}}</a></th>
+                        <td>{{ pedido.cliente.first_name }} {{ pedido.cliente.last_name }}</td>
                         <td>{{ pedido.data }}</td>
-                        <td>{{ pedido.valor }}</td>
+                        <td>R$ {{ pedido.valor_final }}</td>
                         <td>{{ pedido.status }}</td>
                     </tr>
                 {% endfor %}
