--- a/templates/static/usuarios/css/telaprincipal.css
+++ b/templates/static/usuarios/css/telaprincipal.css
@@ -159,7 +159,7 @@ body{
     flex-direction: row;
     min-width: 200px;
     width: 80%;
-    height: 100%;
+    max-height: 100px;
     gap: 1rem;
     border-radius: 8px;
     padding: 1%;
@@ -250,6 +250,16 @@ body{
     background-color: var(--light-color);
     color: var(--dark-color);
 }
+
+.filter-card.category-filter {
+    cursor: pointer;
+}
+
+.filter-card.category-filter.ativo {
+    /* Estilo quando o botão está ativo */
+    background-color: #3498db; /* Cor de fundo azul, por exemplo */
+    color: #fff; /* Texto branco para melhor legibilidade */
+}
 .divider{
     margin: 1rem 0;
     height: 1px;
@@ -324,4 +334,22 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#form-perfil{
+    display: flex;
+    width: 1280px;
+    align-items: center;
+}
+
+#att-perfil .caixa-perfil{
+    width: 1100px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pedidos-anteriores-perfil{
+    margin-left: 60px;
 }
