--- a/usuarios/templates/principal.html
+++ b/usuarios/templates/principal.html
@@ -3,6 +3,7 @@
 
 {% block 'head' %}
     <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 {% endblock %}
 
@@ -45,34 +46,15 @@
             </div>
             <!--highlight menu-->
             <div class="highlight-wrapper">
-                <div class="highlight-card">
-                    <img class="highlight-img" src="{% static 'usuarios/img/destaque1.jpg' %}">
-                    <div class="highlight-desc">
-                        <h4>Coxinhas</h4>
-                        <p>R$2,50</p>
-                    </div>
-                </div>
-                <div class="highlight-card">
-                    <img class="highlight-img" src="{% static 'usuarios/img/destaque2.png' %}">
-                    <div class="highlight-desc">
-                        <h4>Pastel</h4>
-                        <p>R$4,50</p>
-                    </div>
-                </div>
-                <div class="highlight-card">
-                    <img class="highlight-img" src="{% static 'usuarios/img/destaque3.jpg' %}">
-                    <div class="highlight-desc">
-                        <h4>Bolo</h4>
-                        <p>R$6,50</p>
-                    </div>
-                </div>
-                <div class="highlight-card">
-                    <img class="highlight-img" src="{% static 'usuarios/img/destaque4.jpg' %}">
-                    <div class="highlight-desc">
-                        <h4>Esfiha</h4>
-                        <p>R$4,00</p>
-                    </div>
-                </div>
+                {% for produto in produtos|slice:":4" %}
+                    <div class="highlight-card" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
+                        <img class="highlight-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
+                        <div class="highlight-desc">
+                            <h4>{{ produto.nome_produto }}</h4>
+                            <p>R$ {{ produto.preco }}</p>
+                        </div>
+                    </div> 
+                {% endfor %}
             </div>
         </div>
         <!--Menu-->
@@ -87,31 +69,31 @@
                     </div>
                 </div>
                 <div class="filter-wrapper">
-                    <div class="filter-card">
+                    <div class="filter-card category-filter" data-category="cardapio">
                         <div class="filter-icon">
                             <ion-icon name="restaurant-outline"></ion-icon>
                         </div>
                         <p>Cardápio</p>
                     </div>
-                    <div class="filter-card">
+                    <div class="filter-card category-filter" data-category="salgado">
                         <div class="filter-icon">
                             <ion-icon name="fast-food-outline"></ion-icon>
                         </div>
                         <p>Salgados</p>
                     </div>
-                    <div class="filter-card">
+                    <div class="filter-card category-filter" data-category="doce">
                         <div class="filter-icon">
                             <ion-icon name="ice-cream-outline"></ion-icon>
                         </div>
                         <p>Doces</p>
                     </div>
-                    <div class="filter-card">
+                    <div class="filter-card category-filter" data-category="bolo">
                         <div class="filter-icon">
                             <i class='bx bx-cake'></i>
                         </div>
                         <p>Bolos</p>
                     </div>
-                    <div class="filter-card">
+                    <div class="filter-card category-filter" data-category="bebida">
                         <div class="filter-icon">
                             <ion-icon name="cafe-outline"></ion-icon>
                         </div>
@@ -125,7 +107,7 @@
                 <h2 class="main-title">Faça seu pedido</h2>
                 <div class="detail-wrapper">
                     {% for produto in produtos %}
-                    <div class="detail-card produto-card" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
+                    <div class="detail-card produto-card {{ produto.categoria }}" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
                         <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="detail-desc">
                             <div class="detail-name">
@@ -141,10 +123,32 @@
             </div>
         </div>
     </div>
+    <div id="produto-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="fecharModal()">&times;</span>
+            <img id="produto-imagem-modal" class="modal-img" alt="Imagem do Produto">
+            <div class="conteudo-text">
+                <h2 id="produto-nome-modal"></h2>
+                <p id="produto-descricao-modal"></p>
+                <div class="row">
+                    <div class="col-md">
+                        <p id="produto-preco-modal"></p>
+                    </div>
+                    <div class="col-md">
+                        <label for="quantidade-modal">Quantidade:</label>
+                        <input class="quantidade-selecionar" type="number" id="quantidade-modal" name="quantidade-modal" value="1" min="1">
+                    </div> 
+                </div>
+            </div>
+            
+            <button class="botao-add-carrinho" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
+        </div>
+    </div>
 </body>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <!-- javascript-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="{% static 'usuarios/js/principal.js' %}"></script>
+<script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
 {% endblock %}
