tela de carrinho e checkout

--- a/gerenciamento/templates/adicionarProduto.html
+++ b/gerenciamento/templates/adicionarProduto.html
@@ -16,10 +16,10 @@
             </div>
             <div class="botoes">
                 <div class="add-produto" name="addproduto">
-                    <button onclick="exibir_produto('1')" class="add-btn">Cadastrar Produto</button>
+                    <button onclick="exibir_produto('1')" class="btn-add-principal">Cadastrar Produto</button>
                 </div>
                 <div class="att-produto" name="attproduto">
-                    <button onclick="exibir_produto('2')" class="add-btn">Atualizar Produto</button>
+                    <button onclick="exibir_produto('2')" class="btn-add-principal">Atualizar Produto</button>
                 </div>
             </div>
         </div>
