--- a/usuarios/templates/principal.html
+++ b/usuarios/templates/principal.html
@@ -23,8 +23,9 @@
             </div>
 
             <div class="profile">
-                <a class="cart" href="#" onclick="mostrarCarrinho()"><ion-icon name="cart-outline"></ion-icon></a>
+                <a class="cart" href="{% url 'carrinho' %}"><ion-icon name="cart-outline"></ion-icon></a>
             </div>
+            <p id="cart-total">{{carrinho_itens}}</p>
 
             <!-- Container do Carrinho -->
             <div id="carrinho-container" class="carrinho-popup" style="display: none;">
@@ -51,7 +52,7 @@
                         <img class="highlight-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="highlight-desc">
                             <h4>{{ produto.nome_produto }}</h4>
-                            <p>R$ {{ produto.preco }}</p>
+                            <p>R$ {{ produto.preco|floatformat:2 }}</p>
                         </div>
                     </div> 
                 {% endfor %}
@@ -107,13 +108,13 @@
                 <h2 class="main-title">Faça seu pedido</h2>
                 <div class="detail-wrapper">
                     {% for produto in produtos %}
-                    <div class="detail-card produto-card {{ produto.categoria }}" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
+                    <div class="detail-card produto-card {{ produto.categoria }}" onclick="expandirProduto('{{produto.id_produto}}', '{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
                         <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="detail-desc">
                             <div class="detail-name">
                                 <h4>{{produto.nome_produto}}</h4>
                                 <p class="detail-sub">{{produto.descricao}}</p>
-                                <p class="price">R$ {{produto.preco}}</p>
+                                <p class="price">R$ {{produto.preco|floatformat:2}}</p>
                             </div>
                             <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
                         </div>
@@ -141,7 +142,7 @@
                 </div>
             </div>
             
-            <button class="botao-add-carrinho" onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
+            <button class="botao-add-carrinho add-btn update-cart" data-produto='produto-id-modal' data-action="add">Adicionar ao Carrinho</button>
         </div>
     </div>
 </body>
